--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,12 @@
 .lead__caption {
+    margin-top: 8px;
+    align-self: flex-start;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
     line-height: 14px;
+    color: white;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
 }
