--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-    margin: 64px 148px 0 148px;
+    margin: 0 132px 0 132px;
     max-width: 720px;
     font: inter;
     font-family: 'Inter';
