--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,9 +1,11 @@
 .intro__text {
-    margin: 40px 442px 0 148px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
+    max-width: 690px;
     font-size: 16px;
     line-height: 163%;
+    margin: 40px 0 0;
+    padding: 0;
     color: white;
 }
