--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,10 @@
 .intro__title {
-    margin: 92px 442px 0 148px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
+    margin: 0;
+    padding: 0;
     color: white;
 }
