--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,8 @@
 .photo-grid {
-    max-width: 1184px;
+    max-width: calc(100% - 48px * 2);
+    justify-content: center;
     margin: 92px auto 0;
     display: grid;
     gap: 16px;
-    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
-    justify-content: center;
+    grid-template-columns: repeat(4, 1fr);
 }
