--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,3 +8,10 @@
     padding: 0;
     color: white;
 }
+
+@media screen and (max-width:520px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 1.09;
+    }
+}
