--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,3 +9,20 @@
     text-align: center;
     color: white;
 }
+
+@media screen and (max-width:740px) {
+    .lead__subtitle {
+        width: 345px;
+        font-size: 20px;
+        line-height: 1.04;
+    }
+}
+
+@media screen and (max-width:520px) {
+    .lead__subtitle {
+        margin: 16px 0 0;
+        width: 288px;
+        font-size: 16px;
+        line-height: 1.25;
+    }
+}
