--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,3 +6,32 @@
     gap: 16px;
     grid-template-columns: repeat(4, 1fr);
 }
+
+@media screen and (max-width:1160px) {
+    .photo-grid {
+        gap: 14px;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(225px, 1fr));
+    }
+}
+
+@media screen and (max-width:840px) {
+    .photo-grid {
+        max-width: calc(100% - 24px * 2);
+        margin: 88px auto 0;
+        grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(264px, 1fr));
+        gap: 16px;
+    }
+}
+
+@media screen and (max-width:520px) {
+    .photo-grid {
+        max-width: calc(100% - 16px * 2);
+        margin: 64px auto 0;
+        grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(216px, 1fr));
+        row-gap: 12px;
+        column-gap: 0;
+    }
+}
