--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,18 +1,15 @@
 .header__lang-link {
-    width: 30px;
-    height: 28px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    color: white;
-    text-decoration: none;
+    margin: 0 18px 0 0;
+    padding: 0;
+    opacity: 1;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 425px) {
-    .header__lang-link {
-        font-size: 18px;
-        line-height: 1.11;
-    }
+.header__lang-link:last-of-type {
+    margin: 0;
+}
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
