--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,11 +1,19 @@
 .header__lang-links {
-    align-self: end;
-    margin-bottom: 18px;
+    margin: 46px 48px 0 0;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    padding: 0;
+}
+
+@media screen and (max-width:840px) {
+    .header__lang-links {
+        margin: 46px 24px 0 0;
+    }
 }
 
 @media screen and (max-width:520px) {
     .header__lang-links {
-        font-size: 18px;
-        line-height: 1.11;
+        margin: 30px 16px 0 0;
     }
 }
