--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,5 @@
 .header {
+    font-family: 'Inter', Arial, sans-serif;
     padding: 28px 48px 0 48px;
     display: flex;
     justify-content: space-between;
