--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,15 @@
+@import url(../vendor/fonts/inter.css);
 @import url(../blocks/page/page.css);
 @import url(../vendor/normalize.css);
-@import url(../vendor/fonts/inter.css);
 
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__lang-links/header__lang-link.css);
-@import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/lead/lead.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link_active/header__lang-link_active.css);
+@import url(../blocks/header/__lang-link-text/header__lang-link-text.css);
+
+@import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
@@ -26,8 +29,20 @@
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__link/place__link.css);
-@import url(../blocks/place/__paragraph-container/place__paragraph-container);
+
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__website/place__website.css);
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/cover__overlay/cover__overlay.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__links-list-item/footer__links-list-item.css);
+@import url(../blocks/footer/__links-list/footer__links-list.css);
+@import url(../blocks/footer/__links/footer__links.css);
