--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,7 +8,7 @@
     max-width: calc(100% - 48px * 2);
     margin: 92px auto 0;
     cursor: pointer;
-    background-image: url(/images/cover-trains.jpg);
+    background-image: url(../../images/cover-trains.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
