Правки изображений и грид-сетки

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,5 @@
 .cover {
+    position: relative;
     aspect-ratio: 16 / 10;
     display: flex;
     flex-flow: column nowrap;
@@ -14,6 +15,22 @@
     background-repeat: no-repeat;
     font-family: 'Inter', Arial, sans-serif;
 }
+
+.cover::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #2A2C2F;
+        transition: opacity 0.3s ease-in-out;
+        opacity: 0.3;
+    }
+    
+    .cover:hover::before {
+        opacity: 0.8;
+    }
 
 @media screen and (max-width:1160px) {
     .cover {
