--- a/blocks/cover/cover__overlay/cover__overlay.css
+++ b/blocks/cover/cover__overlay/cover__overlay.css
@@ -1,15 +1,17 @@
 .cover__overlay {
     position: absolute;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: #2A2C2F;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 0.3;
-    z-index: 2;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(42, 44, 47, 0.3);
+    transition: background-color 0.3s ease-in-out;
 }
 
-.cover:hover .cover__overlay {
-    opacity: 0.8;
+.cover__overlay:hover {
+    background-color: rgba(42, 44, 47, 0.8);
 }
