--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,8 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/cover__overlay/cover__overlay.css);
+@import url(../blocks/cover/__background/cover__background.css);
+
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
