Исправил все базовые ошибки кроме медиазапросов

--- a/blocks/cover/cover__overlay/cover__overlay.css
+++ b/blocks/cover/cover__overlay/cover__overlay.css
@@ -1,15 +1,17 @@
 .cover__overlay {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    padding: 16px;
     background-color: rgba(42, 44, 47, 0.3);
-    transition: background-color 0.3s ease-in-out;
+    text-align: center;
+    color: white;
 }
 
 .cover__overlay:hover {
