--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,4 +1,6 @@
 .cover__background {
-    width: 100%;
-    display: block;
+    position: relative;
+    padding-top: 62.5%;
+    background-repeat: no-repeat;
+    background-image: url(/images/cover-trains.jpg)
 }
