--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     list-style-type: none;
     padding: 0;
+    border: 2px solid crimson;
 }
 
 @media screen and (max-width:840px) {
