--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,6 +4,7 @@
     font-size: 12px;
     line-height: 1;
     letter-spacing: 0.2em;
+    text-decoration: uppercase;
     margin: 0;
     padding: 0;
     color: #AAAAAA;
