Работа над косяками в медиазапросах

--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,3 +9,9 @@
     padding: 0;
     color: white;
 }
+
+@media screen and (max-width:768px) {
+    .intro__text {
+        max-width: 720px;
+    }
+}
