--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,3 +4,10 @@
     height: 52px;
     object-fit: contain;
 }
+
+@media screen and (max-width:320px) {
+    .header__logo {
+        max-width: 142px;
+        max-height: 42px;
+    }
+}
