--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,17 @@
     justify-content: space-between;
     border: 2px solid crimson;
 }
+
+@media screen and (max-width:768px) {
+    .header {
+        max-width: 720px;
+        margin: 28px 24px 0 24px;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .header {
+        max-width: 288px;
+        margin: 16px 16px 0 16px;
+    }
+}
