--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -10,6 +10,18 @@
     color: white;
 }
 
+@media screen and (max-width:1024px) {
+    .lead__subtitle {
+        margin-bottom: 56px;
+    }
+}
+
+@media screen and (max-width:1024px) {
+    .lead__subtitle {
+        margin-bottom: 56px;
+    }
+}
+
 @media screen and (max-width:740px) {
     .lead__subtitle {
         width: 345px;
