--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -2,5 +2,5 @@
     position: relative;
     padding-top: 62.5%;
     background-repeat: no-repeat;
-    background-image: url(/images/cover-trains.jpg)
+    background-image: url(../../../images/cover-trains.jpg)
 }
