--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,6 @@
 .header__logo {
     align-self: start;
+    margin: 28px 0 0 48px;
     width: 176px;
     height: 52px;
     object-fit: contain;
@@ -7,7 +8,23 @@
 
 @media screen and (max-width:320px) {
     .header__logo {
+        align-self: start;
+        margin: 16px 0 0 16px;
         max-width: 142px;
         max-height: 42px;
+    }
+}
+
+@media screen and (max-width:840px) {
+    .header__logo {
+        margin: 28px 0 0 24px;
+    }
+}
+
+@media screen and (max-width:520px) {
+    .header__logo {
+        margin: 16px 0 0 16px;
+        width: 142px;
+        height: 42px;
     }
 }
