--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,6 @@
 .intro {
     max-width: 984px;
-    padding: 92px 0 0;
-    margin: 0 auto;
+    margin: 64px auto;
 }
 
 @media screen and (max-width:1024px) {
@@ -14,5 +13,11 @@
     .intro {
         margin-left: 24px;
         margin-right: 24px;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .intro {
+        max-width: 288px;
     }
 }
