--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,3 +4,9 @@
     flex-direction: column;
     align-self: end;
 }
+
+@media screen and (max-width:320px) {
+    .place__website {
+        max-width: 288px;
+    }
+}
