--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,11 +2,14 @@
     grid-row: 1;
     display: flex;
     flex-direction: column;
-    align-self: end;
+    align-self: start;
+    margin: 0; 
+    margin-left: 16px;
 }
 
 @media screen and (max-width:320px) {
     .place__website {
-        max-width: 288px;
+        max-width: 100%;
+        margin-left: 16px;
     }
 }
