--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -16,9 +16,12 @@
     }
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:768px) {
     .lead__subtitle {
-        margin-bottom: 56px;
+        max-width: 640px;
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 1.04;
     }
 }
 
