--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,6 +1,13 @@
 .cover__background {
-    position: relative;
-    padding-top: 62.5%;
-    background-repeat: no-repeat;
+    /* max-width: 100%;
+    height: 100%; */
+    position: absolute;
+    background-position: center;
+    background-size: cover;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -2;
     background-image: url(../../../images/cover-trains.jpg);
 }
