--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,20 +1,17 @@
 .cover__subtitle {
-    max-width: 370px;
+    max-width: 360px;
+    margin: 0 auto;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 18px;
     line-height: 1.22;
     text-align: center;
-    color: #FFFFFF;
-    z-index: 3;
-    padding: 0;
-    margin: 32px 0 0;
+    color: #ffffff;
 }
 
-@media screen and (max-width:520px) {
+@media screen and (max-width: 425px) {
     .cover__subtitle {
         font-size: 14px;
         line-height: 1.14;
-        max-width: 288px;
     }
 }
