--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,26 +1,26 @@
 .cover__title {
     max-width: 560px;
+    margin: 0 auto 32px auto;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 1.06;
     text-align: center;
-    margin-bottom: 16px;
-    color: #FFFFFF;
-    margin: 0;
-    padding: 0;
+    color: #ffffff;
 }
 
-@media screen and (max-width:561px) {
+@media screen and (max-width: 525px) {
     .cover__title {
-        max-width: 425px;
-        font-size: 52px;
+        margin: 0 auto 16px auto;
+        max-width: 90%;
+        font-size: 56px;
+        line-height: 1.06;
     }
 }
 
-@media screen and (max-width:520px) {
+@media screen and (max-width: 425px) {
     .cover__title {
-        max-width: 288px;
+        max-width: 90%;
         font-size: 32px;
         line-height: 1.09;
     }
