--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,28 +1,31 @@
 .cover {
-    position: relative;
-    max-width: calc(100% - 48px * 2);
-    margin: 92px auto 0;
-    cursor: pointer;
-    font-family: 'Inter', Arial, sans-serif;
+    max-width: calc(100% - 48px * 2);;
+    margin: 92px auto 0 auto;
+    align-self: center;
 }
 
-@media screen and (max-width:1160px) {
+@media screen and (max-width: 1024px) {
     .cover {
-        max-width: 100%;
-        min-height: 640px;
+        margin: 92px 48px 0 48px;
     }
 }
 
-@media screen and (max-width:840px) {
+@media screen and (max-width: 1024px) {
     .cover {
-        margin: 90px auto 0;
-        min-height: 480px;
+        max-width: 1024px;
     }
 }
 
-@media screen and (max-width:520px) {
+@media screen and (max-width: 768px) {
     .cover {
-        margin: 66px auto 0;
-        min-height: 200px;
+        margin: 90px auto 0 auto;
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .cover {
+        margin: 66px auto 0 auto;
+        max-width: 425px;
     }
 }
