--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,7 @@
     font-family: 'Inter', Arial, sans-serif;
     display: flex;
     justify-content: space-between;
+    margin: auto;
 }
 
 @media screen and (max-width:768px) {
