--- a/blocks/intro/__list-digit/intro__list-digit.css
+++ b/blocks/intro/__list-digit/intro__list-digit.css
@@ -1,5 +1,5 @@
 .intro__list-digit {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial';
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
