--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,5 +1,5 @@
 .intro__list-item {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial';
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
