--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,7 @@
 .intro__text {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial';
     font-style: normal;
+    max-width: 690px;
     font-weight: 400;
     font-size: 16px;
     line-height: 163%;
@@ -11,6 +12,6 @@
 
 @media screen and (max-width:768px) {
     .intro__text {
-        max-width: 720px;
+        max-width: 100%;
     }
 }
