--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,3 +6,29 @@
     position: relative;
     align-items: center;
 }
+
+@media screen and (max-width: 1280px) {
+    .lead {
+        margin: 0 148px 0 148px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .lead {
+        max-width: 928px;
+        margin: 0 48px 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead {
+        max-width: 100vw;
+        margin: 0 24px 0 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        margin: 0 16px 0 16px;
+    }
+}
