--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,10 +1,50 @@
-.place__image {
+/* .place__image {
     max-width: 100%;
     grid-row: 2;
 }
 
 @media screen and (max-width:620px) {
     .place__image {
+        grid-column: 1;
+    }
+} */
+
+.place__image {
+    max-width: 460px;
+    object-fit: cover;
+    display: block;
+    grid-row: 2;
+    grid-column: 1;
+}
+
+@media screen and (max-width: 1024px) {
+    .place__image {
+        max-width: 440px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .place__image {
+        max-width: 400px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__image {
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width: 625px) {
+    .place__image {
+        max-width: 320px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .place__image {
+        max-width: 100%;
+        grid-row: 3;
         grid-column: 1;
     }
 }
