--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,14 +1,12 @@
 .place__link {
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 1.22;
+    text-decoration: none;
     text-decoration-line: underline;
-    color: #FFFFFF;
-    margin: 12px 0 0;
-    padding: 0;
-    opacity: 1;
-    transition: opacity 0.3s ease-in-out;
+    color: #ffffff;
+    transition: opacity .2s ease 0s;
 }
 
 .place__link:hover {
