--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,4 +1,4 @@
-.place__paragraph {
+/* .place__paragraph {
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -9,35 +9,47 @@
     padding: 0;
 }
 
+.place__paragraph:first-of-type {
+    margin-top: 0;
+}
+
 @media screen and (max-width:840px) {
     .place__paragraph {
         font-size: 16px;
     }
 }
 
-@media screen and (max-width:620px) {
-    .place__paragraph {
-        grid-row: 3;
-        grid-column: 1;
-        width: calc(100vw - 16px * 2);
-    }
-}
-
 @media screen and (max-width:768px) {
     .place__paragraph {
+        max-width: 352px;
         font-weight: 400;
-        font-size: 16px;
         line-height: 163%;
         color: #FFFFFF;
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:620px) {
     .place__paragraph {
+        max-width: 352px;
         grid-row: 3;
         grid-column: 1;
+        width: calc(100vw - 16px * 2);
+    }
+}
+
+@media screen and (max-width:320px) {
+    .place__paragraph {
         width: calc(100vw - 16px * 2);
         margin-right: 16px;
         margin-left: 16px;
     }
+} */
+
+.place__paragraph {
+    margin: 0;
+    padding: 0;
+}
+
+.place__paragraph:nth-of-type(2) {
+    margin-top: 26px;
 }
