--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,11 +1,21 @@
-.place__url-heading {
+/* .place__url-heading {
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 1;
     letter-spacing: 0.2em;
-    text-decoration: uppercase;
+    text-transform: uppercase;
     margin: 0;
     padding: 0;
     color: #AAAAAA;
+} */
+
+.place__url-heading {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 100%;
+    letter-spacing: 2px;
+    color: #aaaaaa;
+    margin: 0 0 12px 0;
 }
