--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,15 +1,45 @@
-.place__website {
+/* .place__website {
     grid-row: 1;
     display: flex;
     flex-direction: column;
-    align-self: start;
+    align-self: end;
     margin: 0;
     margin-left: 16px;
 }
 
+@media screen and (max-width: 620px) {
+    .place__website {
+        align-self: start;
+        grid-row: 2;
+        grid-column: 1;
+    }
+}
+
 @media screen and (max-width:320px) {
     .place__website {
+        align-self: start;
         max-width: 100%;
-        margin-left: 16px;
+        margin: 0 16px 0 16px;
+    }
+} */
+
+.place__website {
+    grid-row: 1;
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    align-self: end;
+}
+
+@media screen and (max-width: 600px) {
+    .place__website {
+        grid-row: 2;
+        grid-column: 1;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .place__website {
+        margin: 0 16px 0 16px;
     }
 }
