--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,46 +1,76 @@
 .place {
-    font-family: 'Inter', Arial, sans-serif;
+    max-width: calc(100% - 148px * 2);
+    margin: 80px 148px 0 148px;
     display: grid;
     grid-template-columns: minmax(460px, 1fr) minmax(min-content, max-content);
     grid-template-rows: minmax(min-content, max-content) minmax(460px, 1fr);
-    max-width: 984px;
-    margin: 80px auto 0;
     row-gap: 48px;
     column-gap: 40px;
-    color: #FFFFFF;
 }
 
-@media screen and (max-width:1160px) {
+.place:first-of-type {
+    margin-top: 92px;
+}
+
+@media screen and (max-width: 1024px) {
     .place {
+        max-width: calc(100% - 48px * 2);
+        margin: 80px 48px 0 48px;
         grid-template-columns: minmax(440px, 1fr) minmax(min-content, max-content);
         grid-template-rows: minmax(min-content, max-content) minmax(440px, 1fr);
-        max-width: calc(100% - 48px * 2);
         column-gap: 32px;
     }
 }
 
-@media screen and (max-width:960px) {
+@media screen and (max-width: 900px) {
     .place {
+        max-width: calc(100% - 24px * 2);
+        margin: 80px 36px 0 36px;
+        grid-template-columns: minmax(400px, 1fr) minmax(min-content, max-content);
+        grid-template-rows: minmax(min-content, max-content) minmax(400px, 1fr);
+        column-gap: 30px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place {
+        margin: 73px 24px 0 24px;
         grid-template-columns: minmax(340px, 1fr) minmax(min-content, max-content);
         grid-template-rows: minmax(min-content, max-content) minmax(340px, 1fr);
-        max-width: calc(100% - 24px * 2);
-        margin: 73px auto 0;
         column-gap: 28px;
     }
-}
 
-@media screen and (max-width:620px) {
-    .place {
-        display: flex;
-        flex-direction: column;
-        max-width: 100%;
-        margin: 49px auto 0;
-        justify-items: center;
+    .place:first-of-type {
+        margin-top: 88px;
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width: 625px) {
     .place {
-        max-width: 320px;
+        grid-template-columns: minmax(320px, 1fr) minmax(min-content, max-content);
+        grid-template-rows: minmax(min-content, max-content) minmax(320px, 1fr);
+    }
+
+    .place:first-of-type {
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .place {
+        grid-template-columns: minmax(min-content, 1fr);
+        grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content);
+        row-gap: 32px;
+    }
+
+    .place:first-of-type {
+        margin-top: 64px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .place {
+        margin: 50px 0 0 0;
+        max-width: 100%;
     }
 }
