--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -18,6 +18,6 @@
 
 @media screen and (max-width:320px) {
     .intro {
-        margin: 0 16px 0 16px;
+        margin: 64px 16px 0 16px;
     }
 }
