--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -22,8 +22,8 @@
 
 @media screen and (max-width:320px) {
     .header__logo {
-        width: 142px;
-        height: 42px;
+        max-width: 142px;
+        max-height: 42px;
         margin: 16px 0 48px 16px;
     }
 }
