--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,5 @@
 .lead__caption {
-    margin-top: 8px;
-    margin-bottom: 0;
+    margin: 8px 0 0 0;
     align-self: flex-start;
     font-family: 'Inter';
     font-style: normal;
@@ -15,6 +14,12 @@
 @media screen and (max-width:768px) {
     .lead__caption {
         margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 620px) {
+    .lead__caption {
+        margin-left: 20px;
     }
 }
 
