--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -23,7 +23,7 @@
 @media screen and (max-width: 768px) {
     .lead {
         max-width: 100vw;
-        margin: 0 24px 0 24px;
+        margin: 0;
     }
 }
 
