--- a/blocks/header/__lang-link-text/header__lang-link-text.css
+++ b/blocks/header/__lang-link-text/header__lang-link-text.css
@@ -3,6 +3,7 @@
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
+    margin-right: 18px;
     text-decoration: none;
     color: #FFFFFF;
     margin: 0;
