--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,9 @@
     margin: auto;
     max-width: 1280px;
 }
+
+@media screen and (max-width: 320px) {
+    .header {
+      max-width: 288px;
+    }
+  }
