--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -26,7 +26,7 @@
 
 @media screen and (max-width:520px) {
     .lead__title {
-        width: 288px;
+        max-width: 288px;
         font-size: 40px;
         line-height: 1.1;
     }
@@ -34,6 +34,7 @@
 
 @media screen and (max-width:320px) {
     .lead__title {
+        max-width: 288px;
         margin: 48px 16px 16px 16px;
         font-size: 40px;
         line-height: 1.1;
