--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,5 @@
-.cover__overlay {
-    width: 100%;
+/* .cover__overlay {
+    min-width: 1184px;
     min-height: 740px;
     display: flex;
     flex-direction: column;
@@ -23,6 +23,59 @@
     background-color: #2A2C2F;
     z-index: -1;
     opacity: .3;
+    transition: opacity 0.2s linear;
+}
+
+.cover__overlay:hover:before {
+    opacity: .8;
+}
+
+@media screen and (max-width: 1024px) {
+    .cover__overlay {
+        max-width: 1024px;
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__overlay {
+        min-width: 768px;
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .cover__overlay {
+        min-width: 320px;
+        min-height: 200px;
+    }
+} */
+
+.cover__overlay {
+    width: 100%;
+    min-height: 740px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    text-decoration: none;
+    z-index: 0;
+}
+
+.cover__overlay:before {
+    width: 100%;
+    height: 100%;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #2A2C2F;
+    opacity: .3;
+    z-index: -1;
     transition: opacity 0.2s linear;
 }
 
