--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,12 +6,7 @@
 
 @media screen and (max-width: 1024px) {
     .cover {
-        margin: 92px 48px 0 48px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .cover {
+        /* margin: 92px 48px 0 48px; */
         max-width: 1024px;
     }
 }
