--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,6 @@
 .lead__title {
     margin: 56px 132px 0 132px;
     max-width: 720px;
-    font: inter;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
@@ -35,7 +33,7 @@
 @media screen and (max-width:320px) {
     .lead__title {
         max-width: 288px;
-        margin: 48px 16px 16px 16px;
+        margin: 0 16px 16px 16px;
         font-size: 40px;
         line-height: 1.1;
     }
